--- a/src/containers/UI/Footer/Footer.scss
+++ b/src/containers/UI/Footer/Footer.scss
@@ -2,7 +2,7 @@
 
 .footer {
 	padding: 10px;
-	background-color: whitesmoke;
+	background-color: rgb(20, 20, 20);
 
 	#{&}-socials {
 		justify-content: flex-start;
@@ -23,25 +23,24 @@
 	#{&}-copyrights {
 		margin: 1em 0;
 
-		p {
-			text-align: center;
-			color: #2a2a2a;
-		}
-
 		h6 {
 			font-size: 1.5em;
 			padding: 0 4em;
-			color: #2a2a2a;
 			text-align: center;
 		}
 	}
 
-	#{&}-iswenzz {
-
+	h4, h2, h6 {
+		text-shadow: -1px -1px 1px rgba(255,255,255,.1), 1px 1px 1px rgba(0,0,0,.5);
+		color: gainsboro;
+		font-size: 24px;
+		user-select: none;
+		transition: text-shadow ease-in-out 0.2s;
+		white-space: nowrap;
 	}
 
 	hr {
-		border-color: ghostwhite;
+		border-color: rgb(50, 50, 50);
 	}
 
 	button {
@@ -53,8 +52,8 @@
 	}
 
 	img {
-		margin: 2em 0;
-		width: 150px;
+		margin: 1em;
+		width: 100px;
 		height: auto;
 	}
 }
