--- a/src/containers/UI/NavBar/NavBar.scss
+++ b/src/containers/UI/NavBar/NavBar.scss
@@ -1,10 +1,14 @@
 .navbar {
 	height: 48px;
-	background-color: rgba(40, 40, 40, 0.7) !important;
+	background-color: rgb(20, 20, 20) !important;
 	padding: 0 5%;
 
 	#{&}-logo {
 		text-decoration: none;
+
+		img {
+			margin: 0 1em;
+		}
 
 		h2 {
 			text-shadow: -1px -1px 1px rgba(255,255,255,.1), 1px 1px 1px rgba(0,0,0,.5);
