--- a/src/components/Poll/Poll.scss
+++ b/src/components/Poll/Poll.scss
@@ -1,13 +1,76 @@
 .poll {
+	position: relative;
 	background-color: orange;
 
 	#{&}-section {
 		margin: 4em;
 	}
 
+	#{&}-submit {
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		margin: 2em;
+	}
+
+	#{&}-error {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		margin: 2em;
+		font-family: "Ubuntu", serif;
+		font-weight: bold;
+		color: rgb(245, 0, 87);
+		text-decoration: underline;
+	}
+
+	#{&}-entry {
+		position: relative;
+
+		div {
+			margin: 1em 0 !important;
+
+			span {
+				margin: 0.33em 0;
+			}
+		}
+
+		span {
+			font-family: "Ubuntu", serif;
+			font-size: 20px;
+			justify-content: unset !important;
+			text-align: left;
+		}
+
+		&::before {
+			content: "";
+			position: absolute;
+			bottom: 0;
+			width: 100%;
+			height: 1px;
+			background-color: black;
+		}
+	}
+
+	#{&}-input {
+		margin: 2em 0 !important;
+	}
+
 	h3 {
-		margin: 1em;
+		margin-top: 1em;
 		font-family: "Amita", cursive;
-		border-bottom: solid 1px black;
+		border-bottom: dashed 2px red;
+		text-align: center;
+		color: black !important;
+
+		textarea {
+			background-color: transparent;
+			border: 0;
+			resize: none;
+			width: 80%;
+			font-family: "Amita", cursive;
+			text-align: center;
+			font-size: 30px;
+		}
 	}
 }
