--- a/src/components/Poll/Poll.scss
+++ b/src/components/Poll/Poll.scss
@@ -1,9 +1,11 @@
+@import "../../Responsive";
+
 .poll {
 	position: relative;
 	background-color: orange;
 
 	#{&}-section {
-		margin: 4em;
+		margin: 4em 4em 6em;
 	}
 
 	#{&}-submit {
@@ -22,9 +24,13 @@
 		font-weight: bold;
 		color: rgb(245, 0, 87);
 		text-decoration: underline;
+
+		@include media(tablet_mobile, portrait) {
+			width: 60%;
+		}
 	}
 
-	#{&}-entry {
+	#{&}-entry-result {
 		position: relative;
 
 		div {
@@ -33,13 +39,6 @@
 			span {
 				margin: 0.33em 0;
 			}
-		}
-
-		span {
-			font-family: "Ubuntu", serif;
-			font-size: 20px;
-			justify-content: unset !important;
-			text-align: left;
 		}
 
 		&::before {
@@ -52,8 +51,32 @@
 		}
 	}
 
-	#{&}-input {
+	#{&}-entry-input {
 		margin: 2em 0 !important;
+	}
+
+	#{&}-entry-vote {
+		position: relative;
+
+		&::before {
+			content: "";
+			position: absolute;
+			bottom: 0;
+			width: 100%;
+			height: 1px;
+			background-color: black;
+		}
+
+		span {
+			margin: 0.15em 0;
+		}
+	}
+
+	span {
+		font-family: "Ubuntu", serif;
+		font-size: 20px;
+		justify-content: unset !important;
+		text-align: left;
 	}
 
 	h3 {
