--- a/src/components/Poll/PollCard.scss
+++ b/src/components/Poll/PollCard.scss
@@ -34,14 +34,6 @@
 	#{&}-entry-result {
 		position: relative;
 
-		div {
-			margin: 1em 0 !important;
-
-			span {
-				margin: 0.33em 0;
-			}
-		}
-
 		&::before {
 			content: "";
 			position: absolute;
@@ -49,6 +41,20 @@
 			width: 100%;
 			height: 1px;
 			background-color: black;
+		}
+	}
+
+	#{&}-entry-result-percent {
+		text-align: right !important;
+	}
+
+	#{&}-entry-result-progress {
+		background-color: transparent !important;
+		height: 30px;
+
+		div {
+			margin: 0.5em 0 !important;
+			background-color: rgb(245, 0, 87) !important;
 		}
 	}
 
